--- a/LaundryManagerApp/app/src/main/res/values/colors.xml
+++ b/LaundryManagerApp/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="_bg__login_ek2_color">#F6F6F6</color>
+    <color name="ellipse_1_color">#69E0D9</color>
+    <color name="ellipse_1_ek3_color">#BED9D8</color>
+    <color name="welcome_back__color">#000000</color>
+    <color name="forgot_password_color">#50C2C9</color>
+    <color name="_sign_in_color">#FFFFFF</color>
+    <color name="border2_color">#EBEBEB</color>
+
+    <color name="per_bag_max_3kg_color">#A8A8A8</color>
 </resources>
