Product List and Registration Layout

--- a/LaundryShopManagerCapstone/app/src/main/res/layout/fragment_profile.xml
+++ b/LaundryShopManagerCapstone/app/src/main/res/layout/fragment_profile.xml
@@ -6,17 +6,167 @@
     android:layout_height="match_parent"
     tools:context=".ui.profile.ProfileFragment">
 
-    <TextView
-        android:id="@+id/text_profile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RelativeLayout
+        android:id="@+id/RelativeLayout"
+        android:layout_width="411dp"
+        android:layout_height="733dp"
+        tools:layout_editor_absoluteX="0dp">
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="161dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="0dp"
+            android:layout_marginBottom="30dp"
+            android:background="@color/forgot_password_color" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="141dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="142dp"
+            tools:src="@tools:sample/avatars" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="572dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="1dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="513dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textViewProfileStoreName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Store Name" />
+
+                <EditText
+                    android:id="@+id/editTextProfileStoreName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Store Name"
+                    android:inputType="textPersonName" />
+
+                <TextView
+                    android:id="@+id/textViewProfileStoreOwner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Owner" />
+
+                <EditText
+                    android:id="@+id/editTextProfileStoreOwner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Store Owner"
+                    android:inputType="textPersonName" />
+
+                <TextView
+                    android:id="@+id/textViewProfileContactNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Contact Number" />
+
+                <EditText
+                    android:id="@+id/editTextProfileContactNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Contact Number"
+                    android:inputType="textPersonName" />
+
+                <TextView
+                    android:id="@+id/textViewProfileStoreAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Store Address" />
+
+                <EditText
+                    android:id="@+id/editTextProfileStoreAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Store Address"
+                    android:inputType="textPersonName" />
+
+                <TextView
+                    android:id="@+id/textViewProfileStoreEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Store Email Address" />
+
+                <EditText
+                    android:id="@+id/editTextProfileStoreEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Store Email Address"
+                    android:inputType="textPersonName" />
+
+                <TextView
+                    android:id="@+id/textViewProfileStorePassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Password" />
+
+                <EditText
+                    android:id="@+id/editTextProfileStorePassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Password"
+                    android:inputType="textPersonName" />
+
+                <TextView
+                    android:id="@+id/textViewProfileStorePassword2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/confirm_password_string" />
+
+                <EditText
+                    android:id="@+id/editTextProfileStorePassword2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="@string/confirm_password_string"
+                    android:inputType="textPersonName" />
+
+            </LinearLayout>
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/text_profile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:textAlignment="center"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/buttonProfileSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="302dp"
+            android:layout_marginTop="108dp"
+            android:layout_marginEnd="15dp"
+            android:text="Save" />
+
+    </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
