--- a/LaundryShopManagerCapstone/app/src/main/res/layout/fragment_product_list.xml
+++ b/LaundryShopManagerCapstone/app/src/main/res/layout/fragment_product_list.xml
@@ -159,4 +159,11 @@
         android:layout_marginBottom="45dp"
         app:srcCompat="@android:drawable/ic_dialog_email" />
 
+    <ProgressBar
+        android:id="@+id/progressBar2"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+
 </RelativeLayout>
