--- a/LaundryShopManagerCapstone/app/src/main/res/navigation/mobile_navigation.xml
+++ b/LaundryShopManagerCapstone/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,10 +12,10 @@
         tools:layout="@layout/fragment_books" />
 
     <fragment
-        android:id="@+id/navigation_productlist"
-        android:name="com.example.laundryshopmanagercapstone.ui.productList.ProductListFragment"
+        android:id="@+id/navigation_servicelist"
+        android:name="com.example.laundryshopmanagercapstone.ui.servicesList.ServiceListFragment"
         android:label="@string/title_productlist"
-        tools:layout="@layout/fragment_product_list" />
+        tools:layout="@layout/fragment_service_list" />
 
     <fragment
         android:id="@+id/navigation_profit"
